Fixed body tag positioning

--- a/aria-describedby-and-button.html
+++ b/aria-describedby-and-button.html
@@ -40,7 +40,7 @@
     <main role="main">
         <h1>A button with text: 'www.w3.org' and an aria-describedby attribute.</h1>
         <button aria-describedby="btn_desc">www.w3.org</button>
-        <p id="btn_desc">Open a new window</p></body>
+        <p id="btn_desc">Open a new window</p>
 
         <table>
             <caption>Test Results</caption>
@@ -51,7 +51,7 @@
 
             </tr>
             <tr>
-                <td>Safari</td>
+                <td>Safari 5.1.10</td>
                 <td>VoiceOver</td>
                 <td>'Open a new window'</td>
             </tr>
@@ -72,5 +72,5 @@
             </tr>
         </table>
     </main>
-
+    </body>
 </html>
